# esp-logger

./: CHANGELOG.md  CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: ci.yml  release.yml
build_prev_runner/: Makefile
build_prev_runner/test/: CTestTestfile.cmake  cmake_install.cmake  logger_tests
examples/basic_usage/: basic_usage.ino
examples/custom_sync/: custom_sync.ino
examples/json_logging/: json_logging.ino
src/: ESPLogger.h
src/esp_logger/: logger.cpp  logger.h  logger_allocator.h  logger_config.h
test/: CMakeLists.txt  logger_json_tests.cpp  logger_test_stubs.cpp  logger_tests.cpp  test_support.h
test/stubs/: ESPWorker.h  esp_log.h
test/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
test/stubs_json/: ArduinoJson.h
